# SmartCalc-v1.0

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt
src/documents/: doc.txt
src/example/: CMakeCache.txt  cmake_install.cmake
src/example/.qt/: QtDeploySupport.cmake
src/example/lib/: cmake_install.cmake
src/example/lib/SmartCalculator/: cmake_install.cmake
src/example/lib/SmartCalculator/smartCalculator_autogen/: mocs_compilation.cpp
src/example/lib/SmartCalculator/smartCalculator_autogen/CJB3AIWSVP/: moc_dialoggraph.cpp.d  moc_mainwindow.cpp.d
src/lib/: CMakeLists.txt
src/lib/SmartCalculator/: CMakeLists.txt
src/lib/SmartCalculator/includes/: calculationsmartcalc.hpp  mainwindow.hpp
src/lib/SmartCalculator/srcs/: calculationsmartcalc.cpp  dialoggraph.cpp  mainwindow.cpp
src/srcs/: main.cpp
